# ImageDiff

./: .gitignore  CMakeLists.txt  ImageDiff.pro  LICENSE  README.md  image_label.cpp  image_label.h  main.cpp  main_window.cpp  main_window.h  main_window.ui
Resources/: icon.icns
Resources/Mac/: ImageDiff.plist
src/: mainwindow.cpp  mainwindow.h  myimagelabel.cpp  myimagelabel.h
ui/: mainwindow.ui
